# dida-roof-seg

./: .gitignore  Makefile  README.md  notebook.ipynb  pyproject.toml  requirements.txt  tree.md
src/dida_roofseg/: cli.py  dataset.py  engine.py  io.py  model.py  predict.py  seed.py  train.py  viz.py
tests/: test_cli.py  test_io.py  test_models.py  test_predict.py  test_train.py
